# postgres-named-parameters

./: Cargo.toml  README.md
example-project/: Cargo.toml
example-project/src/: main.rs
postgres-named-parameters/: Cargo.toml
postgres-named-parameters-derive/: Cargo.toml  README.md
postgres-named-parameters-derive/src/: lib.rs  numberify.rs  query.rs  statement.rs
postgres-named-parameters-derive/tests/expand/: query.expanded.rs  query.rs  statement.expanded.rs  statement.rs
postgres-named-parameters/src/: internal.rs  lib.rs
postgresql-named-parameters/: Cargo.toml
postgresql-named-parameters-derive/: Cargo.toml
postgresql-named-parameters-derive/src/: lib.rs  numberify.rs  query.rs  statement.rs  util.rs
postgresql-named-parameters-derive/tests/: tests.rs
postgresql-named-parameters-derive/tests/expand/: basic.expanded.rs  basic.rs  query.expanded.rs  query.rs  statement.expanded.rs  statement.rs
postgresql-named-parameters-tests/: Cargo.toml
postgresql-named-parameters-tests/tests/: tests.rs
postgresql-named-parameters/src/: internal.rs  lib.rs
