[package]
name = "example-project"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres-named-parameters = { path = "../postgres-named-parameters" }
postgres-from-row = "0.5.2"
postgres-types = { version = "0.2.6", features = ["derive"] }
postgres = "0.19.7"