[package]
name = "postgres-named-parameters-derive"
description = "Derive macros used internally by `postgres-named-parameters`. You should not use this crate directly; instead, use `postgres-named-parameters`."
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.75"
quote = "1.0.35"
syn = { version = "2.0.48", features = ["extra-traits"] }
attribute-derive = "0.8.1"

[dev-dependencies]
macrotest = "1.0.9"

[lib]
proc-macro = true